[gd_scene load_steps=3 format=3 uid="uid://b35fe5wdtb77i"]

[ext_resource type="Script" uid="uid://bjkiyg5rckpey" path="res://scripts/globals/sound_icon.gd" id="1_vktsr"]
[ext_resource type="Texture2D" uid="uid://co6wpa07vu58m" path="res://assets/sprites/icons/sound-loud.svg" id="2_nt2bh"]

[node name="SoundIcon" type="CanvasLayer"]
script = ExtResource("1_vktsr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 1079.0
offset_top = 580.0
offset_right = 1143.0
offset_bottom = 644.0
scale = Vector2(0.5, 0.5)

[node name="Sound_Toggle_Button" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture_normal = ExtResource("2_nt2bh")

[connection signal="pressed" from="VBoxContainer/Sound_Toggle_Button" to="." method="_on_sound_toggle_button_pressed"]
